--- a/style.css
+++ b/style.css
@@ -6,69 +6,93 @@
 
 .container{
     width: 100%;
+    height: 100%;
     display: grid;
-    grid-template-rows: repeat(3,auto);
+    grid-template-columns: 100px 100%;
+    
 
 }
 
 
 /*#################-- header --###################*/
 .cabecera {
-    grid-row-start: 1;
-    grid-row-end: 2;
+    grid-column-start: 1;
+    grid-column-end: -1;
     width: 100%;
-    height: 60px;
-
-    /* font-size: 60px; Cambiar el tamaño de la tipografia */
-    
-    text-transform: uppercase; /* Texto en mayusculas */
-    font-weight: bold; /* Fuente en negrita o bold */
-    color: #000000; /* Color del texto */
-    background-color: #ffffff; /* Color de fondo */
-    padding:10px 20px; /* Relleno del boton */
+    display: grid;
+    grid-template-columns:15% 65% 20%;
+    text-transform: uppercase;  /* Texto en mayusculas*/
+    font-weight: bold;  /* Fuente en negrita o bold */ 
+    color: #000000;  /* Color del texto */
+    background-color: #ffffff;  /* Color de fondo */
+ 
     position: fixed;
-    z-index: 99;
+    z-index: 99;  
+ 
+    
     
 }
-.div-contenedor{
-    /* background: red; */
-    display: grid;
-    grid-template-columns: 10% 75% 10%;
-  
-   
-}
-
-.div-l{
-    /* background: green; */
-    padding: 25px 2px;
-    display: grid;
-    grid-template-columns: 20% 30% 25%;
-    grid-gap: 10px;
-} 
-
-.div-b{
-    background: rgb(233, 233, 233);
-    height: 25px;
-    width: 97%;
-    margin:15px 0px;
-}
-
-.div-r{
+/*###########################-- lefth --############################*/
+#div-lef{
     
+    margin-top: 25px ;
+    margin-left: 15px;
+    /* padding-left: 10px; */
     width: 100%;
+    height: 50px;
     display: grid;
-    grid-template-columns: repeat(3, auto);
-    grid-gap: 40px;
+    grid-template-columns: 25% 35% 35% ;
+    
+   
+
+} 
+/*########################-- Buscador --##############################*/
+#buscador{
+    /* padding: 15px 10px; */
+    margin-top: 15px;
+    width: 100%;
+    height: 50px;
+    
+    text-align: start;
+   
+    
 }
+
+#buscador-form{
+    
+    padding: 10px;
+    border-radius: 40px;
+    background: rgb(216, 215, 215);
+}
+
+#buscar-input{
+    width: 100%;
+}
+
+/*####################-- right --#########################*/
+ #navbar-pinterest{
+    width: 100%;
+    
+    display: grid;
+    grid-template-columns:repeat(3,auto);
+    text-align: center;
+    
+    
+}  
 
 /*############-- main ############################*/
 
-.contenido{
-    margin-left: 40px;
-    margin-top: 100px;
+#content{
+   
+    margin-top:100px;
+    margin-right: 120px;
+    margin-left: 20px;
+   
+    grid-column-start: 1;
+    grid-column-end: -1;
     display: grid;
     grid-template-columns: repeat(6,auto);
-    grid-gap: 2px;
+    
     
     
 }
@@ -77,7 +101,7 @@
 .img-div{
     border-radius: 10px;
     
-    margin: 10% 0%;
+    margin-bottom: 15% ;
     text-transform: uppercase; /* Texto en mayusculas */
     
     
@@ -105,11 +129,11 @@
     text-transform: uppercase; /* Texto en mayusculas */
     font-weight: bold; /* Fuente en negrita o bold */
     color: #000000; /* Color del texto */
-    padding: 15px 25px;
+    padding: 15px 30px;
     border-radius: 100%; /* Borde del boton */
     background-color: #ffffff; /* Color de fondo */
     position: fixed;
-    bottom: 40px;
+    bottom: 50px;
     right: 1px;
     transition: all 300ms ease 0ms;
     box-shadow: 0px 8px 15px rgba(0, 0, 0, 0.1);
@@ -126,7 +150,7 @@
    
     background-color: #ffffff; /* Color de fondo */
     padding:5px 20px; /* Relleno del boton */
-    margin: 110px 0px;
+    margin: 120px 5px;
     position: fixed;
     bottom: 1px;
     right: 1px; 
